--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="text">
           Compounding Interest using Loops<br /><a
             href="https://github.com/megankeyes/Compounding-Interest-with-Loops"
+            style="text-decoration: none"
             >Python Project</a
           >
         </div>
@@ -69,6 +70,7 @@
         <div class="text">
           Shopping List Program<br /><a
             href="https://github.com/megankeyes/Shopping-List"
+            style="text-decoration: none"
             >C++ Project</a
           >
         </div>
@@ -82,6 +84,7 @@
         <div class="text">
           BMI Calculator<br /><a
             href="https://github.com/megankeyes/BMI-Calculator"
+            style="text-decoration: none"
             >Python Project</a
           >
         </div>
@@ -93,7 +96,9 @@
           height="100"
         />
         <div class="text">
-          Dice Game<br /><a href="https://github.com/megankeyes/Dice-Game"
+          Dice Game<br /><a
+            href="https://github.com/megankeyes/Dice-Game"
+            style="text-decoration: none"
             >C++ Project</a
           >
         </div>
