--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <ul>
-        <li><h3>megan's website</h3></li>
+        <li><a href="#"><h3>megan's website</h3></a></li>
         <li><a href="#"> About</a></li>
         <li><a href="#"> Contact</a></li>
         <li><a href="#"> Info</a></li>
